# anime-watcher

./: .gitignore  Dockerfile  README.md  logs.txt  prometheus.yml  requirements.txt  wsgi.py
backend/: CMakeLists.txt  main.cpp  mongo_start.sh  start_elasticsearch.sh  start_mongo.sh
backend/database_logic/: CMakeLists.txt
backend/database_logic/abstractdb/: abstractdb.hpp
backend/database_logic/anime_db/: CMakeLists.txt  anime_db.cpp  anime_db.hpp
backend/database_logic/anime_search_db/: CMakeLists.txt  anime_search_db.cpp  anime_search_db.hpp
backend/database_logic/animedb/: CMakeLists.txt  animedb.cpp  animedb.hpp
backend/database_logic/base_mongodb/: CMakeLists.txt  base_mongodb.cpp  base_mongodb.hpp  mongodb_filters.hpp
backend/database_logic/chat_db/: CMakeLists.txt  chat_db.cpp  chat_db.hpp
backend/database_logic/chatdb/: CMakeLists.txt  chatdb.cpp  chatdb.hpp
backend/database_logic/files_db/: anime_images_db.py  profile_images_db.py  video_db.py
backend/database_logic/search_db/: CMakeLists.txt  search_db.cpp  search_db.hpp  start_elasticsearch.sh
backend/database_logic/searchdb/: searchdb.hpp
backend/database_logic/user_data_db/: CMakeLists.txt  user_data_db.cpp  user_data_db.hpp
backend/database_logic/user_name_db/: CMakeLists.txt  user_name_db.cpp  user_name_db.hpp
backend/database_logic/videodb/: videodb.py
backend/http_server/: CMakeLists.txt  fields_alloc.hpp  requests_handler.cpp  server.cpp  server.hpp
data/: anime_data.csv  anime_uploader.py  parser.py
frontend/: app.py  start_redis.sh
frontend/data/: anime.json  anime_uploader.py
frontend/static/css/: style.css
frontend/templates/: anime.html  anime_edit.html  base.html  chat.html  index.html  login.html  register.html  search.html
